# mpy-game-of-color-natmod

./: .gitignore  Cargo.toml  Makefile  README.md  glue.c  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: lib.rs  mpy_print.rs  mpy_types.rs  universe.rs
