[package]
name = "universe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
heapless = "0.9"
libm = "0.2"
rand = { version = "0.10", default-features = false }
rand_xorshift = "0.5"
ufmt =  "0.2"

